--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -78,7 +78,7 @@ Assignment 2:
 
  * Due TBD; 
  * [html file](./assignments/assignment02.html)
- * [cat.csv dataset](./data/cat.csv)
+ * [cat.csv dataset](./data/cat_2.csv)
 
 ### Weeks 5 - 7
 
