--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -62,7 +62,7 @@ Objectives of this assignment
 
 Deadline: TBD
 
-Download: [html file](./assignments/assignment02.html); [cat_2.csv dataset](./data/cat_2.csv)
+Download: [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv)
 
 Key: [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
 
@@ -88,7 +88,7 @@ Continuous data 2: intro to bivariate regression
 
 Deadline: TBD
 
-Download: [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv)
+Download: [html file](./assignments/assignment04.html); [cont2.csv dataset](./data/cont2.csv)
 
 Key: [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R)
 
