--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -78,7 +78,7 @@ Assignment 2:
 
  * Due TBD; 
  * [html file](./assignments/assignment02.html)
- * [cat.csv dataset](./data/cat_2.csv)
+ * [cat.csv dataset](./data/cat.csv)
 
 ### Weeks 5 - 7
 
@@ -111,7 +111,7 @@ Assignment 3:
 
  * Due TBD
  * [html file](./assignments/assignment03.html)
- * [cont.csv dataset (./data/cont.csv)
+ * [cont.csv dataset](./data/cont.csv)
 
 
 
@@ -131,12 +131,12 @@ Assignment 4:
 
  * Due TBD
  * [html file](./assignments/assignment04.html)
- * [cont.csv](./data/cont.csv)
+ * [cont2.csv dataset](./data/cont2.csv)
 
 
 Assignment 5: 
 
  * Due TBD
  * [html file](./assignments/assignment05.html)
- * [ah.csv](./data/ah.csv)
+ * [ah.csv dataset](./data/ah.csv)
 
