--- a/assignments/assignment04.Rmd
+++ b/assignments/assignment04.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "EDUC 641 Assignment 4"
-subtitle: "(Correlation and t-test)"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: true
 ---
 ```{R, setup, include = FALSE}
 if (!require(pacman)) install.packages('pacman', repos = 'https://cran.rstudio.com')
@@ -9,6 +11,8 @@ pacman::p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
 
 opts_chunk$set(include = FALSE)
 ```
+
+Assignment 4: Correlation and t-test
 
 ### General Guidelines
 
