--- a/assignments/assignment05.Rmd
+++ b/assignments/assignment05.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "EDUC 641 Assignment 5"
-subtitle: "(Final Project)"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: true
 ---
 ```{R, setup, include = FALSE}
 if (!require(pacman)) install.packages('pacman', repos = 'https://cran.rstudio.com')
@@ -9,6 +11,8 @@ pacman::p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
 
 opts_chunk$set(include = FALSE)
 ```
+
+Assignment 5: Final Project
 
 ### General Guidelines
 
