--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -99,9 +99,9 @@ Final assignment
 
 Deadline: TBD
 
-Download: [html file](./assignments/assignment05.html); [ah.csv dataset](./data/ah.csv)
+Download: [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv)
 
-Key: 
+Key: [doc file](./assignments/keys/assignment05_key.docx); [R script](./assignments/keys/assignment05_key.R)
 
 
 
